# 3d-maze-runner

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  to-do.md  to-do.txt  vcpkg.json
3d-maze-runner/include/game_objects/: camera.h
3d-maze-runner/include/rendering/geometry/: mesh.h
3d-maze-runner/src/: main.cpp
3d-maze-runner/src/level/: level_loader.cpp
assets/chest/: fragment.fs
assets/levels/: README.md  level1.txt
assets/plane/: fragment.fs
assets/timer_body_hud/: fragment.fs
assets/timer_border_hud/: vertex.vs
assets/wall/: vertex.vs
include/: game.h
include/game_objects/: camera.h  timer.h
include/game_objects/entities/: chest.h
include/maze/: game.h
include/maze/game_objects/: camera.h  fly_cam.h
include/maze/game_objects/entities/: chest.h  wall.h
include/maze/level/: level_loader.h
include/maze/rendering/: renderable.h
include/maze/rendering/core/: renderer.h  world.h
include/maze/rendering/geometry/: mesh.h
include/maze/rendering/material/: material.h  shader.h  shader_program.h  texture.h
include/maze/utils/: collision.h
include/rendering/: hud.h
include/rendering/core/: renderer.h  world.h
include/rendering/material/: material.h
include/utils/: collision.h  common_vertices.h
src/: game.cpp  main.cpp
src/game_objects/: camera.cpp  fly_cam.cpp  timer.cpp
src/game_objects/cameras/: fly_cam.cpp
src/game_objects/entities/: chest.cpp  wall.cpp
src/init/: init_gl.cpp
src/level/: level_loader.cpp
src/rendering/: hud.cpp  material.cpp  shader.cpp
src/rendering/core/: renderer.cpp  world.cpp
src/rendering/geometry/: mesh.cpp
src/rendering/material/: material.cpp  shader.cpp  shader_program.cpp  texture.cpp
src/utils/: collision.cpp
